--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' https://cdn.paddle.com; style-src 'self' 'unsafe-inline' https://cdn.paddle.com; frame-src https://*.paddle.com; connect-src 'self' http://localhost:* https://*.paddle.com; img-src 'self' data: https://*.paddle.com https://*.googleusercontent.com;"
+    />
     <title>Voca</title>
   </head>
   <body>
