--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -34,6 +34,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/voca_logo.png" />
     <link rel="apple-touch-icon" href="/voca_logo.png" />
 
+    <!-- Security -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self'; font-src 'self';" />
+
     <!-- Theme -->
     <meta name="theme-color" content="#fafafa" />
     <meta name="color-scheme" content="light" />
