launch promo: 1 ay ücretsiz MAX plan + countdown banner
- yeni kullanıcılara plan:max, credits:3, 30 gün süre
- billing route'ları ve sidebar geçici olarak devre dışı
- website'e countdown'lu promo banner eklendi (8 Mart UTC)
- CORS ve CSP ayarları deployment için güncellendi

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' https://cdn.paddle.com; style-src 'self' 'unsafe-inline' https://cdn.paddle.com; frame-src https://*.paddle.com; connect-src 'self' http://localhost:* https://*.paddle.com; img-src 'self' data: https://*.paddle.com https://*.googleusercontent.com;"
+      content="default-src 'self'; script-src 'self' https://cdn.paddle.com; style-src 'self' 'unsafe-inline' https://cdn.paddle.com; frame-src https://*.paddle.com; connect-src 'self' http://localhost:* https://*.usevoca.dev https://*.paddle.com; img-src 'self' data: https://*.paddle.com https://*.googleusercontent.com;"
     />
     <title>Voca</title>
   </head>
